--- a/.github/workflows/01-basic-docker-build.yaml
+++ b/.github/workflows/01-basic-docker-build.yaml
@@ -3,25 +3,35 @@ name: 01 Basic Docker Build
 # simplest workflow possible
 
 on:
+#on push to main branch and on pull request it will run
   push:
     branches:
       - main
   pull_request:
 
+# builds ubuntu docker image
 jobs:
   build-image:
     name: Build Image
     runs-on: ubuntu-latest
+    # login to docker hub 
     steps:
-            
+      # this is action format which is:
+      # - name: Name of the step
+      #   uses: action-name@version which is v3 in this case
+      #  with:
+        # options for the action
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+      #building and pushing the image
       - name: Docker build
         uses: docker/build-push-action@v6
         with:
+          # builds with the push that basically says push the image to docker hub
+          # if it is not a pull request
           push: ${{ github.event_name != 'pull_request' }}
+          #the tags here are to push the image with the latest tag and the 01 tag
           tags: bretfisher/docker-ci-automation:latest,bretfisher/docker-ci-automation:01
