learn: multi-platform github actions build

--- a/.github/workflows/03-add-multi-platform.yaml
+++ b/.github/workflows/03-add-multi-platform.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
 
 #NEW: (START) ##########################################################
+# this is to set up QEMU for multi-platform builds
+# qemu is a processor emulator that allows you to run a different architecture on your machine
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 #NEW: (END) ############################################################
