--- a/old/.github/workflows/call-super-linter.yaml
+++ b/old/.github/workflows/call-super-linter.yaml
@@ -22,7 +22,7 @@ jobs:
     ### https://docs.github.com/en/actions/learn-github-actions/reusing-workflows
     ### you can also call workflows from inside the same repo via file path
 
-    #FIXME: customize uri to point to your own forked super-linter repository
+    #FIXME: customize uri to point to your own linter repository
     uses: bretfisher/super-linter-workflow/.github/workflows/reusable-super-linter.yaml@main
     
     ### Optional settings examples
@@ -34,4 +34,4 @@ jobs:
       
       ### A regex to exclude files from linting
       ### defaults to empty
-      # filter-regex-exclude: src/.*
+      # filter-regex-exclude: html/.*
